examples/hello-socat/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: hello-socat-daemon
  labels:
    app: socat-daemon
spec:
  selector:
    matchLabels:
      app: socat-daemon
  template:
    metadata:
      labels:
        app: socat-daemon
    spec:
      hostNetwork: true
      containers:
      - name: socat-daemon
        image: alpine/socat
        resources:
          requests:
            memory: 200M
            cpu: 10m
        command:
        - /bin/sh
        - -c
        - |
          trap 'echo bye ; exit' TERM
          (
          while true; do
            (
            printf "HTTP/1.0 200 OK\r\n"
            printf "X-node: $NODE_NAME\r\n"
            printf "X-pod: $POD_NAME\r\n"
            printf "X-namespace: $POD_NAMESPACE\r\n"
            printf "\r\n"
            printf "Hello World - v1.0\n"
            ) | socat tcp-listen:80,reuseaddr stdio
          done
          ) &
          while true; do
            sleep 1
          done
        ports:
        - containerPort: 80
          hostPort: 80
