examples/hello-socat/ext-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: external-counter
spec:
  type: ExternalName
  externalName: api.fancy-counter.example.com
