examples/hello-socat/lb-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-svc-lb
spec:
  selector:
    app: hello-socat
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
