examples/hello-socat/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-svc
spec:
  selector:
    app: hello-socat
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
